style:fix margins and all overflows

--- a/src/components/contact/Contact.module.css
+++ b/src/components/contact/Contact.module.css
@@ -1,7 +1,14 @@
 .contact {
   text-align: center;
-  /* padding: 50px 100px; */
   width: calc(100vw - 60px);
+  margin-bottom: 3rem;
+}
+.content {
+  padding: 0 0 100px 2%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .contact div h1 {
   font-size: 45px;
@@ -20,6 +27,6 @@
 }
 @media screen and (max-width: 690px) {
   .contact div {
-    padding: 0 20px;
+    padding: 0 10px;
   }
 }
