--- a/src/components/projectCard/ProjectCard.module.css
+++ b/src/components/projectCard/ProjectCard.module.css
@@ -1,95 +1,27 @@
-.projectCard{
-    background-color: #2e2e2e;
-    padding: 20px;
-    max-width: 300px;
-    color: #fff; 
-    border-radius: 9px;
-    box-shadow: 2 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.4s ;
-    margin: 40px 30px;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
+.cardContainer figure {
+  display: grid;
+  border-radius: 1rem;
+  overflow: hidden;
+  cursor: pointer;
 }
-
-.projectCard:hover{
-    transform: translateY(-15px);
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+.cardContainer figure > * {
+  grid-area: 1/1;
+  transition: 0.4s;
 }
-.projectCard div:nth-child(1) {
-    background-image: linear-gradient(to right, rgb(0, 128, 96), rgb(191, 50, 204));
-    width: 300px;
-    height:170px;
-    margin-bottom: 20px;
-    border-radius: 9px;
+.cardContainer figure figcaption {
+  display: grid;
+  align-items: end;
+  font-family: sans-serif;
+  font-size: 2.3rem;
+  font-weight: bold;
+  color: #0000;
+  padding: 0.75rem;
+  background: var(--c, #0009);
+  clip-path: inset(0 var(--_i, 100%) 0 0);
 }
-.projectCard div img{
-    width: 100%;
-    height:100%;
+.cardContainer figure:hover figcaption {
+  --_i: 0%;
 }
-.projectDetails h3{
-  font-size: 25px;
-  letter-spacing: 1.2px ;
-  margin-bottom: 10px;
-}
-.projectDetails{
-    position: relative;
-}
-.icon{
-    position: absolute;
-    font-size: 32px;
-    top: 0;
-    cursor: pointer;
-}
-.icon:nth-child(2){
-   right: 0;
-}
-.icon:nth-child(3){
-   right: 12%;
-}
-.projectDetails p{
-    line-height: 1.6;
-    font-size: 14px;
-    letter-spacing: 1px;
-    color: #ccc4c4;
-    margin: 16px 0;
-}
-.projectDetails div span{
-    font-weight: 700;
-    margin-right: 8px;
-    padding: 2px 8px;
-    color: #ff3c78;
-}
-@media screen and (max-width: 1105px) {
-    .projectCard{
-        margin: 40px 10px;
-    }
-}
-@media screen and (max-width: 990px) {
-    .projectCard{
-        max-width: 500px;
-       flex-direction: row;
-    }
-    .projectCard div:nth-child(1) {
-        width: 800px;
-        height:200px;
-        margin: 0px 20px 0 0;
-    }
-    .projectCardImgContainer span{
-        font-size:28px;
-    }
-    .projectCardImgContainer span:nth-child(2){
-       left: 40%;
-    }
-    .projectCardImgContainer span:nth-child(1){
-       left: 38%;
-    }
-}
-
-@media screen and (max-width: 690px) {
-    .projectCard{
-        max-width: 400px;
-      
-    }
-  
+.cardContainer figure:hover img {
+  transform: scale(1.2);
 }
